fixing footer
fixing footer to prevent content from overlapping

--- a/css/application.css
+++ b/css/application.css
@@ -181,9 +181,21 @@ section {
 /* ---------------------------------------------- */
 
 .contact {
-    background-color: ;
+    background-color: #221c12;
+    background-image: url("../images/symbols-bottom.png");
+    background-repeat: no-repeat;
+    background-position: top;
+    position: relative;
+  /*  background-position: top;*/
     /* TODO add the dark brown background color, and the background image symbols-bottom. Change the background-position so that the bottom of it shows (where the symbols start to fade out). */
+    padding-bottom: 100px;
+    padding-top: 400px;
     /* TODO add some top and bottom padding so that the content doesn't overlap the background image. Note how the padding changes the location of the background image. */
+}
+.contact .row{
+/*    position: absolute;*/
+    bottom: 0;
+    padding: 50px;
 }
 
 .social-links {
